UI changes for code parts

--- a/src/app/charts/charts.component.html
+++ b/src/app/charts/charts.component.html
@@ -11,8 +11,8 @@
         <div id="intro" class="tab-data" style="display: block;" *ngIf="currentTab=='Introduction'">
             <div style="display: inline-flex;">
                 <div>
-                    <h4>Latest Version amcharts 4 is built in Typescript<br>Prerequisite : npm and angular installed
-                    </h4>
+                    <h5>Latest Version amcharts 4 is built in Typescript</h5>
+                    <h4>Prerequisite : npm and angular installed</h4>
                     <ul id="list">
                         <li class="list-item">Build a new angular project using <br><i> ng new my-project-name</i></li>
                         <li class="list-item">In projects root directory run the following command <br> <i>npm install
@@ -28,7 +28,7 @@
                 <div>
                     <h4>To get this project up and running</h4>
                     <ul>
-                        <li>Extract the project zip file into some folder</li>
+                        <li>Extract the project zip file or clone the repo into some folder</li>
                         <li>From the root of the project run command <br><i>npm install</i><br>It will download all the
                             dependecies viz. amcharts library</li>
                         <li>Once the dependencies are installed you are good to go. Run from project root <br> <i>ng serve
@@ -114,7 +114,7 @@
 
                     <li class="list-items">
                         Convert Pie Chart to Donut<br>
-                        <i style="color: yellow;">chart.innerRadius = am4core.percent(40);</i>
+                        <i>chart.innerRadius = am4core.percent(40);</i>
                     </li>
                     <li class="list-item">
                         Series has slices instance which further has template. Whatever property you set on template
