--- a/src/app/charts/charts.component.scss
+++ b/src/app/charts/charts.component.scss
@@ -4,6 +4,11 @@ html{
 body{
     height: 100%;
 }
+h4{
+    font-weight: 600;
+    font-size: 24px;
+    color: #142969;
+}
 #parent{
     width: 100%;
     height: 100%;
@@ -11,7 +16,7 @@ body{
     #nav-bar{
         width: 100%;
         height: 42px;
-        border-bottom: 3px solid black;
+        // border-bottom: 3px solid black;
         #tabs-container{
             width: 100%;
             height: 100%;
@@ -20,14 +25,14 @@ body{
                 cursor: pointer;
                 width: 100px;
                 height: 100%;
-                border-right: 2px solid grey;
+                // border-right: 2px solid grey;
                 text-align: center;
                 p{
                     font-size: 14px;
                 }
             }
             .active{
-                background-color: darkslategrey;
+                background-color: #2d61ff;
                 color: white;
             }
         }
@@ -43,8 +48,11 @@ body{
                 margin-top: 10px;
             }
             i{
-                color: white;
-                background: darkslategray;
+                font-style: normal;
+                color: black;
+                background:  #eceff2;
+                font-family: monospace;
+                
             }
         }
     }
@@ -64,8 +72,10 @@ body{
             margin-top: 10px;
         }
         i{
-            color: white;
-            background: darkslategray;
+            font-style: normal;
+            color: black;
+            background:  #eceff2;
+            font-family: monospace;
         }
     }
 }
